@@ -4569,5 +4569,7 @@
          compatible and keep the selected row. (Sergio).
 20130928 debugger/breakpoint.[c|h],spectrum.c: fix time breakpoints later than
          a frame (patch #302) (Sergio).
-20130928 ui/win32/options.pl: Ignore unused-but-set-variable warnings for
+20130928 ui/win32/options.pl: ignore unused-but-set-variable warnings for
          option dialogs on win32 UI (Sergio).
+20130928 Makefile.am,compat/{Makefile.am,win32/distribution.mk}: take Windows
+         distribution rules out of main Makefile.am (Sergio).
